<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_client_global_pose_sensor</name>
  <version>1.1.0</version>
  <description>The client service for GlobalPoseSensor service </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility_clients</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gps_common</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
