<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_client_global_waypoint_list_driver</name>
  <version>1.1.0</version>
  <description>
      The Global Waypoint List Driver Client allows control of the Global Waypoint List Driver service within the ROS/IOP Bridge.
  </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility_clients</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gps_common</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_list_manager</depend>
  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>
  
</package>
