<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_client_primitive_driver</name>
  <version>1.1.0</version>
  <description>This client searches for PrimitiveDriver service and
    sends the ROS Twist messages as WrenchEfforts to the driver. </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility_clients</url>

  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
